refactor: 코드 품질 개선 — 보안·성능·일관성
- AuthService: refresh 유효기간 하드코딩 제거 (@Value 주입), ATH_USER 상수 사용
- Clognh: LOGIN_SUCCESS/LOGIN_FAILURE/LOGOUT 상수 추출
- JwtUtil: 미사용 isTokenExpired() 제거
- JwtUtilTest: isTokenExpired → validateToken으로 교체
- JpaAuditConfig: CacheManager 빈 추가 (ConcurrentMapCacheManager) — 기동 오류 수정
- SecurityConfig: 미사용 import 3개 제거
- CostController/CostService: DELETE 204 No Content 반환 및 N+1 쿼리 개선
- ProjectService: N+1 쿼리 개선
- ApplicationMapRepository/ApproverRepository: fetch join 최적화

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>